Several features implemented. 1. caching train routes. 2. server tests for translations. 3. optional home address adding. 4. settings changes.
