# artifacts/api-server/src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import addressesRouter from "./addresses";
 import placesRouter from "./places";
 import stationsRouter from "./stations";
 import taxiRouter from "./taxi";
@@ -13,6 +14,7 @@ router.use(healthRouter);
 router.use(trainsRouter);
 router.use(stationsRouter);
 router.use(taxiRouter);
+router.use(addressesRouter);
 router.use(placesRouter);
 router.use(usageRouter);
 router.use(walkRouter);
